--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,10 @@
         "laravel"
     ],
     "require": {
-        "php": ">=5.6.4",
-        "laravel/framework": ">=5.4"
+        "php": ">=7.0.0",
+        "illuminate/database": "^6.0|^7.0|^8.0",
+        "illuminate/http": "^6.0|^7.0|^8.0",
+        "illuminate/support": "^6.0|^7.0|^8.0"
     },
     "authors": [
         {
